--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,28 +17,189 @@
         android:id="@+id/startLoop"
         android:onClick="startLoop"
         android:backgroundTint="#4ce96b"
-        android:textColor="#ffffff"/>
+        android:textColor="#ffffff"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="stop loop"
         android:id="@+id/stopLoop"
-        android:layout_below="@+id/startLoop"
         android:onClick="stopLoop"
         android:backgroundTint="#ed3853"
-        android:textColor="#ffffff"/>
+        android:textColor="#ffffff"
+        android:layout_below="@+id/startLoop"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="stop loop"
+        android:text="Write File"
         android:id="@+id/writeToFile"
-        android:layout_below="@+id/stopLoop"
         android:onClick="createFile"
         android:backgroundTint="#38abed"
-        android:textColor="#ffffff"/>
+        android:textColor="#ffffff"
+        android:layout_below="@+id/stopLoop"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/isConnected"
+        android:layout_alignParentStart="true" />
 
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="STANDING"
+        android:id="@+id/standingButton"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:checked="false"
+        android:onClick="checkActivity"/>
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SITTING"
+        android:id="@+id/sittingButton"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/standingButton"
+        android:layout_alignParentLeft="true"
+        android:checked="false"
+        android:onClick="checkActivity"/>
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WALKING"
+        android:id="@+id/walkingButton"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/sittingButton"
+        android:layout_alignParentLeft="true"
+        android:checked="false"
+        android:onClick="checkActivity"/>
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RUNNING"
+        android:id="@+id/runningButton"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/walkingButton"
+        android:layout_alignParentLeft="true"
+        android:checked="false"
+        android:onClick="checkActivity"/>
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="UPSTAIRS"
+        android:id="@+id/upstairsButton"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/runningButton"
+        android:layout_alignParentLeft="true"
+        android:checked="false"
+        android:onClick="checkActivity"/>
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DOWNSTAIRS"
+        android:id="@+id/downstairsButton"
+        android:layout_below="@+id/upstairsButton"
+        android:layout_alignParentStart="true"
+        android:checked="false"
+        android:onClick="checkActivity"/>
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WAIST"
+        android:id="@+id/waistButton"
+        android:layout_alignTop="@+id/standingButton"
+        android:layout_toEndOf="@+id/standingButton"
+        android:checked="false"
+        android:onClick="checkPosition"/>
+
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WRIST"
+        android:id="@+id/wristButton"
+        android:layout_below="@+id/waistButton"
+        android:layout_alignStart="@+id/waistButton"
+        android:checked="false"
+        android:onClick="checkPosition"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Activity"
+        android:id="@+id/textView"
+        android:layout_below="@+id/writeToFile"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Position"
+        android:id="@+id/textView2"
+        android:layout_above="@+id/standingButton"
+        android:layout_toEndOf="@+id/standingButton" />
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SHOE"
+        android:id="@+id/shoeButton"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/wristButton"
+        android:checked="false"
+        android:onClick="checkPosition"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="isConnected?"
+        android:id="@+id/isConnectedTitle"
+        android:layout_below="@+id/downstairsButton"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/isConnected"
+        android:layout_below="@+id/isConnectedTitle"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Last File Made:"
+        android:id="@+id/lastFileMadeTitle"
+        android:layout_alignBaseline="@+id/isConnectedTitle"
+        android:layout_alignBottom="@+id/isConnectedTitle"
+        android:layout_toEndOf="@+id/wristButton" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lastFileMadeText"
+        android:layout_below="@+id/lastFileMadeTitle"
+        android:layout_alignStart="@+id/lastFileMadeTitle" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/timerText"
+        android:layout_alignParentStart="true"
+        android:text="000000"
+        android:height="40dp"
+        android:textSize="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/lastFileMadeText" />
 
 
 </RelativeLayout>
